writing logics for buttons in js

--- a/calculator.html
+++ b/calculator.html
@@ -4,10 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
-    <link rel="stylesheets" href="calculator.css">
+    <link rel="stylesheet" href="calculator.css">
     <script src="calculator.js" defer></script>
 </head>
 <body>
+    <div class="main">
+    <div class="calci-screen">
+    <div id="screen">0</div>
+    </div>
+    <div class="Allclear">
+    <button id="clear">AC</button>
+    </div>
+    <div class="first_row">
+        <button type="button" class="digitbutton">7</button>
+         <button type="button" class="digitbutton">8</button>
+          <button type="button" class="digitbutton">9</button>
+          <button  type="button"class="operator">+</button>
+    
+    </div>
+    <div class="second_row">
+        <button type="button" class="digitbutton">4</button>
+         <button type="button" class="digitbutton">5</button>
+          <button type="button" class="digitbutton">6</button>
+          <button type="button" class="operator">-</button>
+
+    </div>
+    <div class="third_row">
+        <button type="button" class="digitbutton">1</button>
+         <button type="button" class="digitbutton">2</button>
+          <button type="button" class="digitbutton">3</button>
+          <button type="button" class="operator">*</button>
+
+    </div>
+    <div class="fourth_row">
+        <button type="button" class="digitbutton">0</button>
+         <button type="button" class="digitbutton">.</button>
+          <button type="button" id="equalto">=</button>
+          <button type="button" class="operator">/</button>
+
+    </div>
+
+</div>
     
 </body>
-</htm
+</html>
